# OpenGLExercises

./: LICENSE  README.md
1-HelloWindow/: main.cpp
10-Materials/1-Materials/: CMakeLists.txt  main.cpp
11-LightingMaps/1-DiffuseMap/: main.cpp
11-LightingMaps/1-DiffuseMap/lib/glad/: CMakeLists.txt
11-LightingMaps/2-SpecularMap/: main.cpp
11-LightingMaps/3-SpecularMapWithColors/: main.cpp
11-LightingMaps/4-EmissionMap/: CMakeLists.txt  main.cpp
12-LigthCasters/1-DirectionalLigth/: CMakeLists.txt  main.cpp
12-LigthCasters/2-PointLigth/: main.cpp
12-LigthCasters/3-SpotLigth/: main.cpp
12-LigthCasters/3-SpotLigth/src/: camera.cpp
13-MultipleLights/1-MultipleLigths/: CMakeLists.txt  main.cpp
14-Model/1-Model/: CMakeLists.txt  main.cpp
14-Model/1-Model/include/: mesh.hpp  model.hpp
14-Model/1-Model/src/: mesh.cpp  model.cpp
15-SkeletalAnimation/: CMakeLists.txt  main.cpp
15-SkeletalAnimation/include/: mesh.hpp  model.hpp
15-SkeletalAnimation/resources/minotaur/: modified.fbx
15-SkeletalAnimation/shaderSources/fragmentShaders/: animation.fs  minotaur.fs
15-SkeletalAnimation/shaderSources/vertexShaders/: animation.vs  mech.vs  minotaur.vs
15-SkeletalAnimation/src/: mesh.cpp  model.cpp  shader.cpp
16-NormalMapping/: CMakeLists.txt  main.cpp
16-NormalMapping/include/: camera.hpp
16-NormalMapping/shaderSources/fragmentShaders/: lightingShader.fs
16-NormalMapping/shaderSources/vertexShaders/: lightCubeShader.vs  lightingShader.vs
17-StaticModels/: CMakeLists.txt  README.md  main.cpp
17-StaticModels/include/: mesh.hpp
17-StaticModels/src/: mesh.cpp
18-ShadowMapping/: main.cpp
18-ShadowMapping/1-GenerateDepthMap/: CMakeLists.txt  main.cpp
18-ShadowMapping/1-GenerateDepthMap/include/: mesh.hpp  model.hpp  shader.hpp
18-ShadowMapping/1-GenerateDepthMap/shaderSources/fragmentShaders/: debugDepth.fs  depthShader.fs
18-ShadowMapping/1-GenerateDepthMap/shaderSources/vertexShaders/: lightingShader.vs
18-ShadowMapping/1-GenerateDepthMap/src/: mesh.cpp  model.cpp
18-ShadowMapping/1-GeneratingDepthMap/: main.cpp
18-ShadowMapping/2-RenderingShadows/: main.cpp
18-ShadowMapping/2-RenderingShadows/src/: mesh.cpp
18-ShadowMapping/include/: mesh.hpp
18-ShadowMapping/src/: mesh.cpp
2-HelloTriangle/1-HelloTriangle/: main.cpp
2-HelloTriangle/2-HelloRectangle/: CMakeLists.txt  main.cpp
2-HelloTriangle/3-Exercise1/: CMakeLists.txt  main.cpp
2-HelloTriangle/4-Exercise2/: CMakeLists.txt  main.cpp
2-HelloTriangle/5-Exercise3/: CMakeLists.txt  main.cpp
3-Shaders/1.1-Shaders-RedTriangle/: main.cpp
3-Shaders/1.2-Shaders-ChangingTriangle/: CMakeLists.txt  main.cpp
3-Shaders/1.3-Shaders-ColorAttributes/: main.cpp
3-Shaders/1.4-Shaders-ShaderClass/: CMakeLists.txt  main.cpp
3-Shaders/1.4-Shaders-ShaderClass/shaderSources/fragmentShaders/: triangle.fs
3-Shaders/1.4-Shaders-ShaderClass/shaderSources/vertexShaders/: triangle.vs
3-Shaders/2-Shaders-Exercise1/: CMakeLists.txt  main.cpp
3-Shaders/3-Shaders-Exercise2/: CMakeLists.txt  main.cpp
3-Shaders/3-Shaders-Exercise2/shaderSources/vertexShaders/: shiftRigth.vs
3-Shaders/4-Shaders-Exercise3/: CMakeLists.txt  main.cpp
4-Textures/: main.cpp
4-Textures/1.1-Textures-Container/: main.cpp
4-Textures/1.2-Texture-ContainerAndHappyFace/: main.cpp
4-Textures/2-Exercise1/: CMakeLists.txt  main.cpp
4-Textures/2-Exercise1/shaderSources/fragmentShaders/: reversedHappyFace.fs
4-Textures/3-Exercise2/: CMakeLists.txt  main.cpp
4-Textures/4-Exercise3/: CMakeLists.txt  main.cpp
4-Textures/5-Exercise4/: CMakeLists.txt  main.cpp
5-Transformations/: CMakeLists.txt  main.cpp
5-Transformations/1.1-Transformations-BackwardsRectangle/: main.cpp
5-Transformations/1.1-Transformations-RotatingHappyFace/: CMakeLists.txt  main.cpp
5-Transformations/1.1-Transformations-RotatingHappyFace/lib/stb_image/: CMakeLists.txt
5-Transformations/1.2-Transformations-RotatingCube/: main.cpp
5-Transformations/1.3-Transformations-LotsOfCubes/: CMakeLists.txt  main.cpp
5-Transformations/2-Exercise1/: main.cpp
5-Transformations/3-Exercise2/: CMakeLists.txt  main.cpp
6-CoordinateSystems/1.1-CoordinateSystems-BackwardsRectangle/: main.cpp
6-CoordinateSystems/1.2-CoordinateSystems-RotatingCube/: CMakeLists.txt  main.cpp
6-CoordinateSystems/1.3-CoordinateSystems-LotsOfCubes/: main.cpp
6-CoordinateSystems/2-Exercise1/: CMakeLists.txt  main.cpp
7-Camera/1.1-RotatingCamera/: main.cpp
7-Camera/1.2-Camera-WalkingAround/: main.cpp
7-Camera/1.3-Camera-EqualSpeed/: CMakeLists.txt  main.cpp
7-Camera/1.4-Camera-CameraClass/: CMakeLists.txt  main.cpp
7-Camera/2-Exercise1/: CMakeLists.txt  main.cpp
7-Camera/3-Exercise2/: CMakeLists.txt
8-Colors/: CMakeLists.txt  main.cpp
8-Colors/src/: camera.cpp
9-BasicLighting/: main.cpp
9-BasicLighting/1-BasicLigthting/: CMakeLists.txt
9-BasicLighting/2-BasicLigthting-MovingLigth/: main.cpp
9-BasicLighting/3-BasicLigthting-LigthtingViewSpace/: main.cpp
9-BasicLighting/4-BasicLigthting-GouraudLigthting/: main.cpp
Cube/: CMakeLists.txt  main.cpp
Cube/include/: camera.hpp
Cube/shaderSources/fragmentShaders/: orange.fs
Cube/shaderSources/vertexShaders/: cube.vs  triangle.vs
Cube/src/: camera.cpp
Engine/: CMakeLists.txt  main.cpp
Engine/include/: camera.hpp  cube.hpp  ligth.hpp  mesh.hpp  shader.hpp
Engine/src/: camera.cpp  cube.cpp  ligth.cpp  mesh.cpp  shader.cpp
HelloRectangle/: main.cpp
HelloTriangle/: CMakeLists.txt  main.cpp
HelloWindow/: CMakeLists.txt  main.cpp
Lighting/: CMakeLists.txt  main.cpp
Lighting/include/: camera.hpp  ligth.hpp
Shaders/: main.cpp
Shaders/include/: shader.hpp
Shaders/src/: shader.cpp
Textures/: CMakeLists.txt  main.cpp
Transformations/: main.cpp
(+70 files in other folders)
